V10.0 - Removed conversions on data from reducers and placed them in the action creators so the promise payload is not raw data anymore. Only passing exact data needed to store. Removed ActionTypes from actions.js and placed them in their own file. Since moving the conversions to actions the weather-icon for the button does not appear visible but is present in the DOM. I believe this is a timing issue with the promises. Need to look into a possible lifecyle to handle this problem. the <h1> & other weather-icon append and are visible. Fixed Active State of button but the text remains white not yellow even though that is what it is set to in the less file.

--- a/public/styles.less
+++ b/public/styles.less
@@ -89,9 +89,7 @@ nav {
     background-color: black;
   }
   .form-control:focus {
-    color: black;
-    background-color: yellow;
-    border-color: black;
+    border-color: yellow;
   }
   span {
     height: 100%;
@@ -144,6 +142,20 @@ nav {
   background-color: yellow;
   border-color: black;
 }
+.button-link:focus:active:visited {
+  color: yellow !important;
+  background-color: black;
+  border-color: yellow;
+}
+
+a {
+  color: yellow;
+}
+
+i {
+  height: 50px;
+  width: 50px;
+}
 
 #BackgroundContainer {
 
@@ -166,14 +178,7 @@ nav {
 
 
 
-a {
-  color: yellow;
-}
 
-i {
-  height: 50px;
-  width: 50px;
-}
 
 
 
